Tmux 3.0 change, make backwards compatible

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -10,7 +10,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Kill session key
-bind-key \ confirm-before -p "Kill Session? (y/n)" kill-session
+bind-key '\' confirm-before -p "Kill Session? (y/n)" kill-session
 
 # Disable annoying sounds
 set-option -g bell-action none
